--- a/config.env
+++ b/config.env
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = "pendiamfrustasi"
 FSUB_CHANNEL_ID = -1001663641474
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://dmltb.herokuapp.com"
+BASE_URL_OF_BOT = "https://dmltbb.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
